// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncrementDecrementButtons render disabled 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "padding": 10,
    }
  }
>
  <IncrementDecrementButtons
    max={2}
    min={1}
    number={2}
    numberStyle={
      Object {
        "padding": 10,
      }
    }
    onDecrement={[MockFunction]}
    onIncrement={[MockFunction]}
    showNumber={true}
  />
</View>
`;

exports[`IncrementDecrementButtons renders 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Button
    icon={
      <TextIcon
        code=""
        orbit={true}
        style={
          Object {
            "color": "#7f91a8",
            "fontSize": 14,
          }
        }
      />
    }
    onPress={[MockFunction]}
    touchable={true}
  />
  <Button
    icon={
      <TextIcon
        code=""
        orbit={true}
        style={
          Object {
            "color": "#7f91a8",
            "fontSize": 14,
          }
        }
      />
    }
    onPress={[MockFunction]}
    touchable={true}
  />
</Component>
`;

exports[`IncrementDecrementButtons shows number 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "padding": 10,
    }
  }
>
  <IncrementDecrementButtons
    max={3}
    min={1}
    number={2}
    numberStyle={
      Object {
        "padding": 10,
      }
    }
    onDecrement={[MockFunction]}
    onIncrement={[MockFunction]}
    showNumber={true}
  />
</View>
`;
